--- a/data/awards.yaml
+++ b/data/awards.yaml
@@ -1,3 +1,8 @@
+- year: 2025
+  month: 7
+  name: "ICTIR Best Paper Honorable Mention Award"
+  description: "Axioms for Retrieval-Augmented Generation. ICTIR 2025 Full Paper."
+  url: https://www.linkedin.com/feed/update/urn:li:activity:7352254413387796483/
 - year: 2024
   month: 9
   name: "BioASQ Challenge Winner"
