--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,11 +46,9 @@ jobs:
           key: cache-lychee-${{ github.sha }}
           restore-keys: cache-lychee-
       - name: 🔄 Check links
-        id: linkCheck
-        uses: lycheeverse/lychee-action@v1
+        uses: lycheeverse/lychee-action@v2
         with:
-          lycheeVersion: '0.13.0'
-          args: --require-https --verbose --no-progress --max-concurrency 1 --root-dir "$(pwd)/public" --exclude https://twitter.com/H1iReimer/ --exclude https://linkedin.com/in/janheinrichmerker/ --exclude heinrich@merker.id --accept 999 --max-retries 10 --retry-wait-time 30 --max-redirects 10 --timeout 120 --method HEAD public/
+          args: --require-https --verbose --no-progress --max-concurrency 1 --root-dir "$(pwd)/public" --exclude https://twitter.com/H1iReimer/ --exclude https://linkedin.com/in/janheinrichmerker/ --exclude heinrich@merker.id --max-retries 10 --max-redirects 10 public/
           fail: false
       - name: 📤 Upload public pages
         uses: actions/upload-artifact@v4
